; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dm_local.c_dmlab_reward_override.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dm_local.c_dmlab_reward_override.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEEPMIND_REWARD_OVERRIDE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmlab_reward_override(i8* %0, i32 %1, i32 %2, i32* %3, i64 %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = load i32, i32* @DEEPMIND_REWARD_OVERRIDE, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = ptrtoint i8* %14 to i64
  %16 = load i32, i32* %8, align 4
  %17 = sext i32 %16 to i64
  %18 = load i32, i32* %9, align 4
  %19 = sext i32 %18 to i64
  %20 = load i32*, i32** %10, align 8
  %21 = ptrtoint i32* %20 to i64
  %22 = load i64, i64* %11, align 8
  %23 = load i32, i32* %12, align 4
  %24 = sext i32 %23 to i64
  %25 = call i32 @trap_DeepmindCallback(i32 %13, i64 %15, i64 %17, i64 %19, i64 %21, i64 %22, i64 %24, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  ret i32 %25
}

declare dso_local i32 @trap_DeepmindCallback(i32, i64, i64, i64, i64, i64, i64, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
